--- a/links.html
+++ b/links.html
@@ -24,7 +24,9 @@
     <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex014/index">ex014</a><br>
     <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex015/index">ex015</a><br>
     <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex015/page002">ex015-pag2</a><br>
-    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex016x">ex016</a>
+    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex016x/cor01">ex016 - 1</a>
+    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex016x/cor02">ex016 - 2</a>
+    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex016x/cor03">ex016 - 3</a>
     
 </body>
 </html>
