--- a/links.html
+++ b/links.html
@@ -24,9 +24,12 @@
     <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex014/index">ex014</a><br>
     <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex015/index">ex015</a><br>
     <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex015/page002">ex015-pag2</a><br>
-    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex016x/cor01">ex016 - 1</a>
-    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex016x/cor02">ex016 - 2</a>
-    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex016x/cor03">ex016 - 3</a>
+    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex016x/cor01">ex016 - 1</a><br>
+    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex016x/cor02">ex016 - 2</a><br>
+    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex016x/cor03">ex016 - 3</a><br>
+    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex017/fonte01">ex017</a>
+    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex018/fonte01">ex018 - 1</a>
+    <a href="https://diouzefybelfort.github.io/html-css/exercicios/ex018/fonte02">ex018 - 2</a>
     
 </body>
 </html>
