--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -21,7 +21,8 @@
         td {
             border: 1px solid black;
             padding: 8px;
-            width: 70px;
+            text-align: center; /* Alinhamento horizontal*/
+            vertical-align: middle; /*Alinhamento vertical*/ 
         }
 
     </style>
