--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -14,6 +14,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption {
@@ -26,9 +27,19 @@
             border-right: 1px solid black;
         }
 
+        tbody > tr:nth-child(2n) {
+            background-color: lightgray;
+        }
+
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1;
+            background-color: gray;
         }
 
         th, td {
@@ -56,127 +67,137 @@
             TFOOT
                 TR, TD, TH
     -->
-    
+
+
     <table>
+
         <caption>
             População das Unidades Federativas
         </caption>
+
         <thead>
-            <th scope="col">Estado</th>
-            <th scope="col">População</th>
+            <tr>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
+            </tr>
         </thead>
 
         <tbody>
-            <td>São Paulo</td>
-            <td class="num">41.262.199</td>
-        </tbody>
-        <tbody>
-            <td>Minas Gerais</td>
-            <td class="num">19.597.330</td>
-        </tbody>
-        <tbody>
-            <td>Rio de Janeiro</td>
-            <td class="num">15.989.929</td>
-        </tbody>
-        <tbody>
-            <td>Bahia</td>
-            <td class="num">14.016.906</td>
-        </tbody>
-        <tbody>
-            <td>Paraná</td>
-            <td class="num">10.444.526</td>
-        </tbody>
-        <tbody>
-            <td>Rio Grande do Sul</td>
-            <td class="num">10.693.929</td>
-        </tbody>
-        <tbody>
-            <td>Pernambuco</td>
-            <td class="num">8.796.448</td>
-        </tbody>
-        <tbody>
-            <td>Ceará</td>
-            <td class="num">8.452.381</td>
-        </tbody>
-        <tbody>
-            <td>Pará</td>
-            <td class="num">7.581.051</td>
-        </tbody>
-        <tbody>
-            <td>Santa Catarina</td>
-            <td class="num">6.248.436</td>
-        </tbody>
-        <tbody>
-            <td>Goiás</td>
-            <td class="num">6.003.788</td>
-        </tbody>
-        <tbody>
-            <td>Maranhão</td>
-            <td class="num">6.574.789</td>
-        </tbody>
-        <tbody>
-            <td>Amazonas</td>
-            <td class="num">3.483.985</td>
-        </tbody>
-        <tbody>
-            <td>Espírito Santo</td>
-            <td class="num">3.514.952</td>
-        </tbody>
-        <tbody>
-            <td>Paraíba</td>
-            <td class="num">3.766.528</td>
-        </tbody>
-        <tbody>
-            <td>Mato Grosso</td>
-            <td class="num">3.035.122</td>
-        </tbody>
-        <tbody>
-            <td>Rio Grande do Norte</td>
-            <td class="num">3.168.027</td>
-        </tbody>
-        <tbody>
-            <td>Alagoas</td>
-            <td class="num">3.120.494</td>
-        </tbody>
-        <tbody>
-            <td>Piauí</td>
-            <td class="num">3.118.360</td>
-        </tbody>
-        <tbody>
-            <td>Distrito Federal</td>
-            <td class="num">2.570.160</td>
-        </tbody>
-        <tbody>
-            <td>Mato Grosso do Sul</td>
-            <td class="num">2.449.024</td>
-        </tbody>
-        <tbody>
-            <td>Sergipe</td>
-            <td class="num">2.068.017</td>
-        </tbody>
-        <tbody>
-            <td>Rondônia</td>
-            <td class="num">1.562.409</td>
-        </tbody>
-            <td>Tocantins</td>
-            <td class="num">1.383.445</td>
-        </tbody>
-        <tbody>
-            <td>Acre</td>
-            <td class="num">733.559</td>
-        </tbody>
-        <tbody>
-            <td>Amapá</td>
-            <td class="num">669.526</td>
-        </tbody>
-        <tbody>
-            <td>Roraima</td>
-            <td class="num">450.479</td>
-        </tbody>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.049</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21.168.791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17.264.943</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14.873.064</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11.433.957</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">11.377.239</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9.557.071</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">9.132.078</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">8.602.865</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">7.164.788</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td class="num">7.075.181</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="num">7.018.354</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td class="num">4.144.597</td>
+            </tr>
+            <tr>
+                <td>Espírito Santo</td>
+                <td class="num">4.018.650</td>
+            </tr>
+            <tr>
+                <td>Paraíba</td>
+                <td class="num">4.018.127</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="num">3.506.853</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="num">3.484.466</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">3.337.357</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num">3.273.227</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="num">3.015.268</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num">2.778.986</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td class="num">2.298.696</td>
+            </tr>
+            <tr>
+                <td>Rondônia</td>
+                <td class="num">1.777.225</td>
+            </tr>
+            <tr>
+                <td>Tocantins</td>
+                <td class="num">1.572.866</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td class="num">881.935</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="num">845.731</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td class="num">605.761</td>
+            </tr>
+        </tbody>  
 
         <tfoot>
-            <th scope="row">Total de Habitantes</th>
-            <td class="num"><strong>198.281.039</strong></td>
+            <tr>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num"><strong>198.281.039</strong></td>
+            </tr>
         </tfoot>
 
     </table>
